--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fe-fast",
   "displayName": "fe-fast",
   "description": "比心直播H5快捷开发工具",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.73.0"
   },
@@ -11,10 +11,15 @@
   ],
   "keywords": [
     "比心",
-    "鱼儿直播",
+    "鱼耳直播",
     "H5",
+    "工具",
     "快捷开发"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/likaiweb/fe-fast.git"
+  },
   "icon": "resources/logo.png",
   "publisher": "coderRick",
   "activationEvents": [
