--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "better-opn": "^3.0.2",
     "execa": "^5.1.1",
-    "fs-extra": "^11.1.0"
+    "fs-extra": "^11.1.0",
+    "simple-git": "^3.19.0"
   }
 }
