--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fe-fast",
   "displayName": "fe-fast",
   "description": "比心直播H5快捷开发工具",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "engines": {
     "vscode": "^1.73.0"
   },
@@ -30,7 +30,7 @@
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
-    "release": "npm version patch --no-git-tag-version && vsce publish"
+    "release": "npm version patch --no-git-tag-version"
   },
   "devDependencies": {
     "@types/glob": "^8.0.0",
